Changes for 0.8.0:

* Fixed issue #49: Create ra::unicode namespace to wrap functions that provide support to unicode.
* Fixed issue #50: Support for Windows Unicode (a.k.a. UTF-16).


Changes for 0.7.0:
 
**This version of RapidAssist contains breaking changes!**
**Many library categories (including their associated namespaces) are renamed for clarity and better compatibility with other libraries.**
**Function names now follows *[Google C++ Style Guide](https://google.github.io/styleguide/cppguide.html#Function_Names)* naming rules: functions start with a capital letter and have a capital letter for each new word.**

* Fixed issue #35: Rename time namespace to timing.
* Fixed issue #36: Rename gtesthelp namespace to testing.
* Fixed issue #38: Rename cppencoder namespace to code::cpp.
* Fixed issue #39: Rename logger namespace to logging.
* Fixed issue #43: Consider using Google's C++ Style Guide.
* Fixed issue #44: Remove usage of the word 'folder' for functions in ra::filesystem namespace.
* Fixed issue #45: Deprecate functions from ra::testing namespace that are available in other namespaces.
* Fixed issue #47: Move ra::environment::IsConfigurationDebug() implementation in header file.


Changes for 0.6.0:

* Fixed issue #15: ra::filesystem::readFile() and writeFile().
* Fixed issue #16: SAFE_WARNING_DISABLE macro.
* Fixed issue #17: SAFE_DELETE macro.
* Fixed issue #18: Create `errors` namespace.
* Fixed issue #19: where() or which() function.
* Fixed issue #21: New vector manipulation generic functions.
* Fixed issue #22: ra::filesystem::getFilenameWithoutExtension().
* Fixed issue #23: ra::environment::getEnvironmentVariables().
* Fixed issue #24: ra::user::getUsername().
* Fixed issue #25: Get current user system directories.
* Fixed issue #26: parseBoolean() and toString(bool).
* Fixed issue #27: createFolder() fails with absolute path.
* Fixed issue #28: ra::filesystem::makeRelativePath().
* Fixed issue #29: ra::filesystem::copyFile().