@@ -33,131 +33,117 @@ namespace ra { namespace testing {
 
 #ifdef _WIN32 // UTF-8
 
-  //
-  // Description:
-  //  Returns true if the content of two files is identical.
-  // Arguments:
-  //   iFile1:          The path of the first  file.
-  //   iFile2:          The path of the second file.
-  //   oReason:         A textual reason why the files are not identical. Empty if files are identical.
-  //   iMaxDifferences: The maximum number of textual differences.
-  // 
+  /// <summary>
+  /// Returns true if the content of two files is identical.
+  /// </summary>
+  /// <param name="iFile1">The path of the first  file.</param>
+  /// <param name="iFile2">The path of the second file.</param>
+  /// <param name="oReason">A textual reason why the files are not identical. Empty if files are identical.</param>
+  /// <param name="iMaxDifferences">The maximum number of textual differences. Use -1 for finding all differences. Use 1 to return as soon as a difference is found.</param>
+  /// <returns>Returns true if the content of two files is identical. Returns false otherwise.</returns>
   bool IsFileEqualsUtf8(const char* iFile1, const char* iFile2, std::string & oReason, size_t iMaxDifferences);
 
-  inline bool IsFileEqualsUtf8(const char* iFile1, const char* iFile2) { std::string reason; return IsFileEqualsUtf8(iFile1, iFile2, reason, -1); }
-  inline bool IsFileEqualsUtf8(const char* iFile1, const char* iFile2, std::string & oReason) { return IsFileEqualsUtf8(iFile1, iFile2, oReason, -1); }
+  inline bool IsFileEqualsUtf8(const char* iFile1, const char* iFile2) { std::string reason; return IsFileEqualsUtf8(iFile1, iFile2, reason, 1 /*return ASAP*/); }
+  inline bool IsFileEqualsUtf8(const char* iFile1, const char* iFile2, std::string & oReason) { return IsFileEqualsUtf8(iFile1, iFile2, oReason, 1 /*return ASAP*/); }
 
-  //
-  // Description:
-  //  Returns the location of all differences in two files.
-  // Arguments:
-  //   iFile1:          The path of the first  file.
-  //   iFile2:          The path of the second file.
-  //   oDifferences:    The list of all differences within both files. Empty if files are identical.
-  //   iMaxDifferences: The maximum number of differences.
-  // 
+  /// <summary>
+  /// Returns the location of all differences in two files.
+  /// </summary>
+  /// <param name="iFile1">The path of the first  file.</param>
+  /// <param name="iFile2">The path of the second file.</param>
+  /// <param name="oDifferences">The list of all differences within both files. Empty if files are identical.</param>
+  /// <param name="iMaxDifferences">The maximum number of differences.</param>
+  /// <returns>Returns the location of all differences in two files. Returns false otherwise.</returns>
   bool GetFileDifferencesUtf8(const char* iFile1, const char* iFile2, std::vector<FileDiff> & oDifferences, size_t iMaxDifferences);
 
-  //
-  // Description:
-  //  Returns true if the given text is found in a file.
-  // Arguments:
-  //   iFilename:   The path of the search file.
-  //   iValue:      The search value.
-  //   oLine:       The line number where iValue is found.
-  //   oCharacter:  The character offset within the line.
-  // 
+  /// <summary>
+  /// Returns true if the given text is found in a file.
+  /// </summary>
+  /// <param name="iFilename">The path of the search file.</param>
+  /// <param name="iValue">The search value.</param>
+  /// <param name="oLine">The line number where iValue is found.</param>
+  /// <param name="oCharacter">The character offset within the line.</param>
+  /// <returns>Returns true if the given text is found in a file. Returns false otherwise.</returns>
   bool FindInFileUtf8(const char* iFilename, const char* iValue, int & oLine, int & oCharacter);
 
-  //
-  // Description:
-  //  Creates a file of the given size. All bytes are sequential.
-  // Arguments:
-  //   iFilePath:   The path of the file.
-  //   iSize:       The size in bytes of the file.
-  // 
+  /// <summary>
+  /// Creates a file of the given size. All bytes are sequential.
+  /// </summary>
+  /// <param name="iFilePath">The path of the file.</param>
+  /// <param name="iSize">The size in bytes of the file.</param>
+  /// <returns>Returns true on success. Returns false otherwise.</returns>
   bool CreateFileUtf8(const char * iFilePath, size_t iSize);
 
-  //
-  // Description:
-  //  Creates text file.
-  // Arguments:
-  //   iFilePath:   The path of the file.
-  // 
+  /// <summary>
+  /// Creates text file.
+  /// </summary>
+  /// <param name="iFilePath">The path of the file.</param>
+  /// <returns>Returns true on success. Returns false otherwise.</returns>
   bool CreateFileUtf8(const char * iFilePath);
 
-  //
-  // Description:
-  //  Modify a given byte with the specified value.
-  // Arguments:
-  //   iFilePath: The path of the file.
-  //   iOffset:   The offset of the modified byte.
-  //   iValue:    The value of the replacement.
-  // 
+  /// <summary>
+  /// Modify a given byte with the specified value.
+  /// </summary>
+  /// <param name="iFilePath">The path of the file.</param>
+  /// <param name="iOffset">The offset of the modified byte.</param>
+  /// <param name="iValue">The value of the replacement.</param>
   void ChangeFileContentUtf8(const char * iFilePath, size_t iOffset, unsigned char iValue);
 
 #elif __linux__ // UTF-8
 
-  //
-  // Description:
-  //  Returns true if the content of two files is identical.
-  // Arguments:
-  //   iFile1:          The path of the first  file.
-  //   iFile2:          The path of the second file.
-  //   oReason:         A textual reason why the files are not identical. Empty if files are identical.
-  //   iMaxDifferences: The maximum number of textual differences.
-  // 
+  /// <summary>
+  /// Returns true if the content of two files is identical.
+  /// </summary>
+  /// <param name="iFile1">The path of the first  file.</param>
+  /// <param name="iFile2">The path of the second file.</param>
+  /// <param name="oReason">A textual reason why the files are not identical. Empty if files are identical.</param>
+  /// <param name="iMaxDifferences">The maximum number of textual differences. Use -1 for finding all differences. Use 1 to return as soon as a difference is found.</param>
+  /// <returns>Returns true if the content of two files is identical. Returns false otherwise.</returns>
   inline bool IsFileEqualsUtf8(const char* iFile1, const char* iFile2) { return IsFileEquals(iFile1, iFile2); }
   inline bool IsFileEqualsUtf8(const char* iFile1, const char* iFile2, std::string & oReason) { return IsFileEquals(iFile1, iFile2, oReason); }
   inline bool IsFileEqualsUtf8(const char* iFile1, const char* iFile2, std::string & oReason, size_t iMaxDifferences) { return IsFileEquals(iFile1, iFile2, oReason, iMaxDifferences); }
 
-  //
-  // Description:
-  //  Returns the location of all differences in two files.
-  // Arguments:
-  //   iFile1:          The path of the first  file.
-  //   iFile2:          The path of the second file.
-  //   oDifferences:    The list of all differences within both files. Empty if files are identical.
-  //   iMaxDifferences: The maximum number of differences.
-  // 
+  /// <summary>
+  /// Returns the location of all differences in two files.
+  /// </summary>
+  /// <param name="iFile1">The path of the first  file.</param>
+  /// <param name="iFile2">The path of the second file.</param>
+  /// <param name="oDifferences">The list of all differences within both files. Empty if files are identical.</param>
+  /// <param name="iMaxDifferences">The maximum number of differences.</param>
+  /// <returns>Returns the location of all differences in two files. Returns false otherwise.</returns>
   inline bool GetFileDifferencesUtf8(const char* iFile1, const char* iFile2, std::vector<FileDiff> & oDifferences, size_t iMaxDifferences) { return GetFileDifferences(iFile1, iFile2, oDifferences, iMaxDifferences); }
 
-  //
-  // Description:
-  //  Returns true if the given text is found in a file.
-  // Arguments:
-  //   iFilename:   The path of the search file.
-  //   iValue:      The search value.
-  //   oLine:       The line number where iValue is found.
-  //   oCharacter:  The character offset within the line.
-  // 
+  /// <summary>
+  /// Returns true if the given text is found in a file.
+  /// </summary>
+  /// <param name="iFilename">The path of the search file.</param>
+  /// <param name="iValue">The search value.</param>
+  /// <param name="oLine">The line number where iValue is found.</param>
+  /// <param name="oCharacter">The character offset within the line.</param>
+  /// <returns>Returns true if the given text is found in a file. Returns false otherwise.</returns>
   inline bool FindInFileUtf8(const char* iFilename, const char* iValue, int & oLine, int & oCharacter) { return FindInFile(iFilename, iValue, oLine, oCharacter); }
 
-  //
-  // Description:
-  //  Creates a file of the given size. All bytes are sequential.
-  // Arguments:
-  //   iFilePath:   The path of the file.
-  //   iSize:       The size in bytes of the file.
-  // 
+  /// <summary>
+  /// Creates a file of the given size. All bytes are sequential.
+  /// </summary>
+  /// <param name="iFilePath">The path of the file.</param>
+  /// <param name="iSize">The size in bytes of the file.</param>
+  /// <returns>Returns true on success. Returns false otherwise.</returns>
   inline bool CreateFileUtf8(const char * iFilePath, size_t iSize) { return CreateFile(iFilePath, iSize); }
 
-  //
-  // Description:
-  //  Creates text file.
-  // Arguments:
-  //   iFilePath:   The path of the file.
-  // 
+  /// <summary>
+  /// Creates text file.
+  /// </summary>
+  /// <param name="iFilePath">The path of the file.</param>
+  /// <returns>Returns true on success. Returns false otherwise.</returns>
   inline bool CreateFileUtf8(const char * iFilePath) { return CreateFile(iFilePath); }
 
-  //
-  // Description:
-  //  Modify a given byte with the specified value.
-  // Arguments:
-  //   iFilePath: The path of the file.
-  //   iOffset:   The offset of the modified byte.
-  //   iValue:    The value of the replacement.
-  // 
+  /// <summary>
+  /// Modify a given byte with the specified value.
+  /// </summary>
+  /// <param name="iFilePath">The path of the file.</param>
+  /// <param name="iOffset">The offset of the modified byte.</param>
+  /// <param name="iValue">The value of the replacement.</param>
   inline void ChangeFileContentUtf8(const char * iFilePath, size_t iOffset, unsigned char iValue) { ChangeFileContent(iFilePath, iOffset, iValue); }
 
 #endif // UTF-8
