@@ -2,6 +2,7 @@ Changes for 0.8.0:
 
 * Fixed issue #49: Create ra::unicode namespace to wrap functions that provide support to unicode.
 * Fixed issue #50: Support for Windows Unicode (a.k.a. UTF-16).
+* Fixed issue #51: Function in `ra::testing` namespace are lacking documentation.
 
 
 Changes for 0.7.0:
